--- a/assets/style.css
+++ b/assets/style.css
@@ -1,3 +1,11 @@
+:root {
+  --pri: teal;
+  --sec: lightblue;
+  --ter: purple;
+  --text: white;
+  --back: black;
+}
+
 *,
 *::before,
 *::after {
@@ -13,8 +21,8 @@ body,
 }
 
 body {
-  font-family: sans-serif;
-  background-color: #f9fbfd;
+  font-family:'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+  background-color: var(--back);
 }
 
 .wrapper {
@@ -27,15 +35,15 @@ header {
   text-align: center;
   padding: 20px;
   padding-top: 0px;
-  color: hsl(206, 17%, 28%);
+  color: var(--sec);
 }
 
 .card {
-  background-color: hsl(0, 0%, 100%);
+  background-color: var(--pri);
   border-radius: 5px;
   border-width: 1px;
-  box-shadow: rgba(0, 0, 0, 0.15) 0px 2px 8px 0px;
-  color: hsl(206, 17%, 28%);
+  box-shadow: var(--sec) 0px 2px 8px 0px;
+  color: gold;
   font-size: 18px;
   margin: 0 auto;
   max-width: 800px;
@@ -46,7 +54,7 @@ header {
   content: " ";
   display: block;
   width: 100%;
-  background: #e7e9eb;
+  background: var(--sec);
   height: 2px;
 }
 
@@ -62,7 +70,7 @@ header {
   content: " ";
   display: block;
   width: 100%;
-  background: #e7e9eb;
+  background: var(--sec);
   height: 2px;
 }
 
@@ -74,11 +82,11 @@ header {
 
 .btn {
   border: none;
-  background-color: hsl(360, 91%, 36%);
+  background-color: var(--ter);
   border-radius: 25px;
-  box-shadow: rgba(0, 0, 0, 0.1) 0px 1px 6px 0px rgba(0, 0, 0, 0.2) 0px 1px 1px
+  box-shadow: var(--sec) 0px 1px 6px 0px var(--sec) 0px 1px 1px
     0px;
-  color: hsl(0, 0%, 100%);
+  color: var(--sec);
   display: inline-block;
   font-size: 22px;
   line-height: 22px;
